--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <i class="fas fa-moon"></i>
                 </button>
                 <button id="install-btn" class="install-btn hidden">
-                    <i class="fas fa-download"></i> Instalar
+                    <i class="fas fa-download" style="color: var(--text-primary);"></i> Instalar
                 </button>
                 <input type="file" id="fileProject" accept=".json,application/json,text/json,text/plain" style="display:none" onchange="loadProjectJSON(this)">
             </div>
@@ -1013,4 +1013,5 @@
         }
     </script>
 </body>
+
 </html>
