--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <table id="table-b1" style="min-width: 950px;">
                     <thead>
                         <tr>
-                            <th style="width:50px">Editar</th>
+                            <th style="width:40px">Edit</th>
                             <th style="width:35px">Nº</th>
                             <th style="width:70px">Código</th>
                             <th>Descripción del Ítem</th>
@@ -1050,4 +1050,5 @@
         }
     </script>
 </body>
+
 </html>
