--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         <i class="fas fa-search" style="position:absolute; left:12px; top:50%; transform:translateY(-50%); color:#a0aec0;"></i>
                         <input type="text" id="main-bank-search" placeholder="Buscar en el banco..." 
                             onkeyup="currentPage.bank=1; renderBankList()" 
-                            style="width:100%; padding:10px 10px 10px 35px; border-radius:6px; border:1px solid var(--border);">
+                            style="width:100%; padding:10px 10px 10px 35px; border-radius:6px; border:1px solid var(--border-color);">
                     </div>
                 </div>
             </div>
@@ -703,7 +703,7 @@
                 <div style="position:relative; margin-bottom:12px;">
                     <i class="fas fa-search" style="position:absolute; left:12px; top:50%; transform:translateY(-50%); color:#718096;"></i>
                     <input type="text" id="bank-search" placeholder="Buscar actividad por nombre o código..." onkeyup="filterBankModal()" 
-                        style="width:100%; padding:10px 10px 10px 35px; border-radius:6px; border:1px solid var(--border);">
+                        style="width:100%; padding:10px 10px 10px 35px; border-radius:6px; border:1px solid var(--border-color);">
                 </div>
                 <div style="overflow-y:auto; flex-grow:1; border:1px solid #e2e8f0; border-radius:6px;">
                     <table class="db-select-table">
