--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                 <span id="save-indicator" class="status-dot" title="Estado de guardado"></span>
             </div>
             <div class="header-actions">
-                <button class="btn btn-secondary" onclick="document.getElementById('fileProject').click()"><i class="fas fa-folder-open"></i> Abrir</button>
-                <button class="btn btn-success" onclick="openSaveOptionsModal()"><i class="fas fa-save"></i> Guardar</button>
-                <button class="btn btn-secondary" onclick="openConfigModal()" title="Configuración"><i class="fas fa-cog"></i> Configuración</button>
-                <button class="btn btn-info" onclick="openReportModal()" title="Generar Reportes"><i class="fas fa-print"></i> Reportes</button>
-                <button class="btn btn-danger" onclick="openDeleteModal()" title="Opciones de Borrado"><i class="fas fa-trash-alt"></i> Borrar</button>
-                <button id="theme-toggle" class="icon-btn"><i class="fas fa-moon"></i></button> <!-- Modo oscuro y claro -->
+                <button class="btn" onclick="document.getElementById('fileProject').click()"><i class="fas fa-folder-open"></i> Abrir</button>
+                <button class="btn" onclick="openSaveOptionsModal()"><i class="fas fa-save"></i> Guardar</button>
+                <button class="btn" onclick="openConfigModal()" title="Configuración"><i class="fas fa-cog"></i> Configuración</button>
+                <button class="btn" onclick="openReportModal()" title="Generar Reportes"><i class="fas fa-print"></i> Reportes</button>
+                <button class="btn" onclick="openDeleteModal()" title="Opciones de Borrado"><i class="fas fa-trash-alt"></i> Borrar</button>
+                <button id="theme-toggle" class="btn"><i class="fas fa-moon"></i></button> <!-- Modo oscuro y claro -->
         
                 <button id="install-btn" class="install-btn hidden"><i class="fas fa-download"></i> Instalar</button>
                 <input type="file" id="fileProject" accept=".json,application/json,text/json,text/plain" style="display:none" onchange="loadProjectJSON(this)">
